<resources>
    <string name="app_name">Muvi Catalog</string>
    <string name="movie_image">Movie Image</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_description">Movie Description</string>
    <string name="title_tv_show">TV Show</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="movie_directed">Ahmad Muhyidin</string>
    <string name="directed_by">Movie By</string>
    <string name="synopsis">Synopsis</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="back">Back</string>
    <string name="now_playing">Now Playing</string>
    <string name="tv_all_movie">All Movie</string>
    <string name="tv_popular">Popular</string>
    <string name="tv_coming_soon">Coming Soon</string>
    <string name="settings">Settings</string>
    <string name="movie_rating">5.0</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string-array name="data_name_now_playing">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avenger Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Hunter Killer</item>
        <item>Mortal Engines</item>
        <item>Robin Hood</item>
        <item>Spiderman Into the Spider-Verse</item>
        <item>Venom</item>
    </string-array>
    <string-array name="data_name_popular">
        <item>Jumanji: The Next Level</item>
        <item>Frozen II</item>
        <item>Joker</item>
        <item>Terminator : Dark Fate</item>
        <item>Aladdin</item>
        <item>Fast &amp; Furious Presents: Hobbs &amp; Shaw</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
    </string-array>
    <string-array name="data_directed_now_playing">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Joe Russo</item>
        <item>Susanne Bier</item>
        <item>Bryan Singer</item>
        <item>Donovan Marsh</item>
        <item>Christian Rivers</item>
        <item>Otto Bathurst</item>
        <item>Rodney Rothman</item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string-array name="data_directed_popular">
        <item>Jake Kasdan</item>
        <item>Chris Buck</item>
        <item>Todd Phillips</item>
        <item>Tim Miller</item>
        <item>Guy Ritchie</item>
        <item>David Leitch</item>
        <item>Travis Knight</item>
        <item>Steven Caple Jr</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>Tatsuya Nagamine</item>
    </string-array>
    <string-array name="data_genre_now_playing">
        <item>Romance, Music</item>
        <item>Action, Adventure</item>
        <item>Action, Fiction</item>
        <item>Drama</item>
        <item>Drama, Music</item>
        <item>Action</item>
        <item>Adventure, Fantasy</item>
        <item>Adventure, Action</item>
        <item>Action, Adventure</item>
        <item>Action, Fiction</item>
    </string-array>
    <string-array name="data_genre_popular">
        <item>Action, Adventure</item>
        <item>Animation, Family</item>
        <item>Drama, Crime</item>
        <item>Action, Fiction</item>
        <item>Adventure, Fantasy</item>
        <item>Action, Adventure</item>
        <item>Action, Fiction</item>
        <item>Drama</item>
        <item>Action, Comedy</item>
        <item>Animation, Family</item>
        <item>Animation, Fantasy</item>
    </string-array>
    <string-array name="data_rating_now_playing">
        <item>3.8</item>
        <item>3.2</item>
        <item>4.5</item>
        <item>3.2</item>
        <item>4.0</item>
        <item>3.2</item>
        <item>3.1</item>
        <item>3.0</item>
        <item>4.2</item>
        <item>3.3</item>
    </string-array>
    <string-array name="data_rating_popular">
        <item>3.5</item>
        <item>3.6</item>
        <item>4.2</item>
        <item>3.2</item>
        <item>3.5</item>
        <item>3.3</item>
        <item>3.3</item>
        <item>3.0</item>
        <item>3.4</item>
        <item>4.0</item>
        <item>3.7</item>
    </string-array>
    <string-array name="data_description_now_playing">
        <item>A country music star whose career began to fade, Jackson Maine (Bradley Cooper) found a talent that is very talented in themselves from a young musician named Ally (Lady Gaga). Maine succeeded in making Ally a promising young star. Mentors and students. Along with the skyrocketing careers of Ally and him, Maine is increasingly dilemma about this problem.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a very large army, Orm plans to conquer the remaining ocean people and then to the surface of the world. What blocked his way was Arthur Curry, half-human half-human Orm half-brother and the true heir to the throne.</item>
        <item>Because the Avengers and their allies continue to protect the world from threats that are too large to be handled by a hero, a new danger has emerged from the cosmic shadow: Thanos. An intergalactic blasphemous despotic, his aim is to collect all six Infinity Stones, unimaginable power artifacts, and use them to cause twisted will to all reality. Everything that the Avengers have fought for has evolved to this day - the fate of the Earth and its very existence has never been more certain.</item>
        <item>Five years after an unpleasant, invisible presence made most people commit suicide, a survivor and his two children made a desperate attempt to achieve safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon rocked the world of Music when they formed the rock and roll band Queen in 1970. Hit songs became an instant classic. When Mercury\'s increasingly wild lifestyle began to spiral out of control, Queen immediately faced her biggest challenge - finding ways to keep the band together amidst success and strength.</item>
        <item>Captain Glass from USS Arkansas discovered that a coup was taking place in Russia, so he and his crew joined an elite group working on the ground to prevent war.</item>
        <item>For thousands of years in the future, cities on earth will explore the world with big wheels, devouring each other in the struggle for diminishing resources. In one of the great city tracction, old London, Tom Natsworthy experienced an unexpected encounter with a mysterious young woman from an abandoned area who would change her life forever.</item>
        <item>A hard war fighter and his Moorish commander waged a brave uprising against the corrupt British crown.</item>
        <item>Miles Morales juggled his life between being a middle school student and being a spider man. When Wilson "Kingpin" Fisk uses a super collider, the others from across Spider-Verse are transported to this dimension.</item>
        <item>A journalist, Eddie Brock (Tom Hardy) wants to make an investment case for the discovery led by Dr. Carlton Drake (Riz Ahmed). Because of his investigation, Eddie visited Dr.\'s lab Calrlton Drake. Everything is intended to prove that Dr. Carlton Drake is doing an evil act using Symbiote. However, unfortunately for Eddie, this living organism entered his body. Eddie found super powers within him that were able to control everything he did.</item>
    </string-array>
    <string-array name="data_description_popular">
        <item>Spencer returns to the world of Jumanji, prompting his friends, his grandfather and his grandfather\'s friend to enter a different and more dangerous version to save him.</item>
        <item>Elsa, Anna, Kristoff and Olaf head far into the forest to learn the truth about an ancient mystery of their kingdom.</item>
        <item>During the 1980s, a comedian failed to rise up and turn to a violent life in Gotham City while becoming a famous psychopathic crime figure.</item>
        <item>Decades after Sarah Connor prevented Judgment Day, a lethal new Terminator is sent to eliminate the future leader of the resistance. In a fight to save mankind, battle-hardened Sarah Connor teams up with an unexpected ally and an enhanced super soldier to stop the deadliest Terminator yet.</item>
        <item>Aladdin is a kind-hearted street criminal. He will compete with Jafar, an evil wizard for the magic lamp that has the power to make their deepest wishes come true.</item>
        <item>Hobbs &amp; Shaw (2019) cinema film baru barat yang sangat seru Ini bercerita Luke Hobbs (Dwayne Johnson) terpaksa membentuk aliansi yang mustahil dengan Deckard Shaw (Jason Statham). Keduanya terpaksa bersatu membantu Hattie Shaw (Vanessa Kirby) untuk memburu senjata virus berbahaya dan Brixton (Idris Elba). Brixton adalah penjahat jenis baru yang berhasil mengubah dirinya menjadi manusia super. Keberadaanya menjadi ancaman bagi umat manusia.</item>
        <item>On an escape in 1987, Bumblebee found a shelter in a junkyard in the small coastal town of California. Charlie, at the age of 18 and trying to find his place in the world, found Bumblebee, a battle scar and broken. When Charlie turned it on, he quickly learned that this wasn\'t an ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for the next big battle against opponents who have ties to his family\'s past, Adonis Creed faces the challenges of his life.</item>
        <item>Kidnapped Fred Savage is forced to hold the Deadpool PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that is full of miracles, miracles and zero F.</item>
        <item>When Hiccup fulfilled his dream of creating a peaceful dragon utopia, Toothless\'s discovery of an untested and elusive couple kept Night Fury away. When the danger increases at home and the Hiccup government as the village head is tested, both dragons and motorists must make the impossible decision to save their kind.</item>
        <item>Earth is peaceful after the Power Tournament. Realizing that the universe still has many stronger people to see, Goku spends all of his training days reaching greater heights. Then one day, Goku and Vegeta were confronted by a Saiyan named Broly whom they had never seen before. The Saiyan people should have been almost completely destroyed in the destruction of Planet Vegeta, so what was this person doing on Earth? The meeting between the three Saiyan who had followed this very different destiny turned into an extraordinary battle, with even Frieza (returning from Hell) trapped in the mix.</item>
    </string-array>
    <string-array name="data_directed_tv_now_playing">
        <item>Jon Favreau</item>
        <item>Dan Harmon</item>
        <item>Geoff Johns</item>
        <item>Greg Berlanti</item>
        <item>Philip Pullman</item>
        <item>Michael Hirst</item>
        <item>Hanno Hackfort</item>
        <item>Greg Berlanti</item>
        <item>Greg Berlanti</item>
        <item>Salim Akil</item>
    </string-array>
    <string-array name="data_directed_tv_popular">
        <item>Damon Lindelof</item>
        <item>Julie Plec</item>
        <item>Tom Perrotta</item>
        <item>Sam Esmail</item>
        <item>Bruno Heller</item>
        <item>Tom Kapinos</item>
        <item>Evan Goldberg</item>
        <item>Jeff Franklin</item>
        <item>David Shore</item>
        <item>Ilene Chaiken</item>
        <item>Robert Kirkman</item>
    </string-array>
</resources>